<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:fitsSystemWindows="true"
    tools:context="com.example.wangjie.systemblueteeth.MainActivity">


    <TextView
        android:id="@+id/textView2"
        android:text="@string/company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="239dp"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/connectCar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:id="@+id/connectCar"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView2" />


    <com.example.wangjie.systemblueteeth.myView.Rudder
        android:id="@+id/rudder"
        android:layout_width="280dip"
        android:layout_height="160dip"
        android:layout_marginBottom="11dp"
        android:layout_marginStart="14dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/goDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/goDown"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/goUp"
        android:layout_marginBottom="27dp" />

    <Button
        android:text="@string/goUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="38dp"
        android:id="@+id/goUp"
        android:layout_below="@+id/connectCar"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="25dp" />

    <TextView
        android:id="@+id/showLog"
        android:text="日志"
        android:fadeScrollbars="false"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:scrollbars="vertical" />

    <Button
        android:id="@+id/quitCar"
        android:text="@string/quitCar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/goUp"
        android:layout_toEndOf="@+id/showLog" />

</RelativeLayout>
